--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -43,11 +43,8 @@
     .banner-content-xs {
       position: absolute;
       top: 100px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
+      left: calc(50% - 107px);
       text-align: center;
-      align-items: center;
       color: $home-font-color;
       padding: 0 10px;
       h1, h2, h3, p {
